# Backend-ASCII-Tube

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml  dockerfile  init-database.sh  package-lock.json  readme.md
api/: Cargo.toml
api/src/: handlers.rs  lib.rs  root.rs  server.rs  structs.rs  upload.rs
auth/src/: jwt_auth.rs
db/src/: db_connection.rs
entities/src/: comment.rs  user.rs  video.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  m20230213_174341_create_table_comment.rs  m20230213_180310_create_table_video.rs
queries/: Cargo.toml
queries/src/: coment_service.rs  lib.rs  structs.rs  user_service.rs  video_service.rs
temp/: explication_rust.txt
