[package]
name = "queries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "queries"
path = "src/lib.rs"


[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
salvo = "*"
tokio = {workspace = true }
futures = {workspace = true }
sea-orm = {workspace = true }
sea-orm-migration = {workspace = true }
chrono = {workspace = true }
entities =  {path   = "../entities"}
serde = {workspace = true }
serde_json = {workspace = true }
bcrypt = {workspace = true }
db = { path = "../db" }
reqwest = { version = "0.11", features = ["json"] }